--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Trading History</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./src/css/style.css">
   </head>
   <body>
     <div id="page-wrapper">
@@ -19,6 +19,6 @@
       <ul id="messages"></ul>
 
     </div>
-    <script src="./scripts/app.js"></script>
+    <script src="./src/scripts/app.js"></script>
   </body>
 </html>
